feat: add web client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
       - "8083:8080"
     environment:
       - PROFILE=stateful
+      - BASE_URL=http://stateful-auth-api:8080
     networks:
       - stateful
 
